--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,9 +44,13 @@
     <header>
         <div class="container">
             <div class="intro-text">
+                <!-- 
                 <div class="intro-lead-in">Welcome To Our Studio!</div>
                 <div class="intro-heading">It's Nice To Meet You</div>
-                <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+                -->
+                    <a href="#services" class="page-scroll btn btn-xl scroll-bottom-btn">
+                        <i class="fa fa-arrow-down"></i>
+                    </a>
             </div>
         </div>
     </header>
