--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,11 +18,13 @@
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
+                    <!--
                     <li>
                         <a class="page-scroll" href="#services">Services</a>
                     </li>
+                    -->
                     <li>
-                        <a class="page-scroll" href="#portfolio">Portfolio</a>
+                        <a class="page-scroll" href="#portfolio">Menu</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#about">About</a>
@@ -46,7 +48,7 @@
         <div class="hero-content">
             <h1 class="hero-title">Saja Cafe</h1>
             <div class="hero-subtitle">Est. 2025</div>
-            <a href="#services" class="scroll-bottom-btn hero-arrow-only">
+            <a href="#portfolio" class="scroll-bottom-btn hero-arrow-only">
                 <i class="fa fa-arrow-down"></i>
             </a>
         </div>
