--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -608,6 +608,35 @@ section h3.section-subheading {
     background-color: #f1f1f1;
 }
 
+.timeline > li .timeline-image {
+    width: 170px;
+    height: 170px;
+    margin-left: -85px; /* Half the width */
+    border-radius: 50%; /* Make it circular */
+    overflow: hidden;   /* Hide any overflow */
+    position: relative;
+    background-color: #fed136;
+}
+
+.timeline > li .timeline-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+/* Adjust for mobile screens */
+@media(max-width:767px) {
+    .timeline > li .timeline-image {
+        width: 100px;
+        height: 100px;
+        margin-left: -50px;
+    }
+}
+
 .timeline>li {
     position: relative;
     margin-bottom: 50px;
