--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,7 +33,7 @@
                         <a class="page-scroll" href="#team">Team</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#contact">Visit Us</a>
                     </li>
                 </ul>
             </div>
