--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -1,29 +1,21 @@
-<!-- Portfolio Grid Section -->
-    <section id="portfolio" class="bg-light-gray">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Menu</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-                </div>
-            </div>
-            <div class="row">
-            {% for post in site.posts %}
-                <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/{{ post.thumbnail }}" class="img-responsive img-centered" alt="">
-                    </a>
-                    <div class="portfolio-caption">
-                        <h4>{{ post.title }}</h4>
-                        <p class="text-muted">{{ post.subtitle }}</p>
-                    </div>
-                </div>
-            {% endfor %}
+<!-- Menu Section -->
+<section id="portfolio" class="bg-light-gray">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading">Menu</h2>
+                <h3 class="section-subheading text-muted">Check out our delicious offerings</h3>
             </div>
         </div>
-    </section>
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="menu-image-container" style="display: flex; justify-content: center; align-items: center;">
+                    <img src="img/portfolio/menu.jpg" 
+                         class="img-responsive" 
+                         alt="Saja Cafe Menu" 
+                         style="border-radius: 8px; box-shadow: 0 4px 16px rgba(0,0,0,0.15); max-width: 800px; height: auto;">
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
