--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -628,13 +628,6 @@ section h3.section-subheading {
     left: 0;
 }
 
-/* Desktop menu image */
-.menu-image-container img {
-    max-width: 800px;
-    width: 100%;
-    height: auto;
-}
-
 /* Adjust for mobile screens */
 @media(max-width:767px) {
     .timeline > li .timeline-image {
@@ -642,22 +635,8 @@ section h3.section-subheading {
         height: 100px;
         margin-left: -50px;
     }
-}
-
-/* Mobile responsive menu image */
-@media (max-width: 768px) {
     .menu-image-container img {
-        max-width: 100%;
-        width: 95%;
-        margin: 0 auto;
-    }
-}
-
-@media (max-width: 480px) {
-    .menu-image-container img {
-        max-width: 100%;
-        width: 90%;
-        margin: 0 auto;
+        max-width: 95% !important;
     }
 }
 
