--- a/_includes/about.html
+++ b/_includes/about.html
@@ -25,6 +25,19 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4 class="subheading">Sustainability</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">We’re doing our best to cut down on waste wherever we can. By sourcing locally grown ingredients from nearby producers, we’re helping our community grow together. All syrups are made in house to guarantee quality.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="timeline-image">
                                 <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
@@ -32,22 +45,14 @@
                                     <h4 class="subheading">Kerr County Flood Relief Fund</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">This fund supports urgent relief and long-term rebuilding after the devastating floods of July 4, 2025. All donations from the cafe will go directly towards affected families and communities.</p>
-                                </div>
-                            </div>
-                        </li>
-                        <!--
-                        <li>
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>December 2012</h4>
-                                    <h4 class="subheading">Transition to Full Service</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">This fund supports urgent relief and long-term rebuilding after the devastating floods of July 4, 2025. Your generosity helps neighbors across our region recover and rebuild. Click 
+                                        <a href="https://cftexashillcountry.fcsuite.com/erp/donate/create/fund?funit_id=4201" 
+                                        target="_blank" 
+                                        style="color: #fed136; text-decoration: none;">
+                                            here
+                                        </a> 
+                                        to learn more.
+                                    </p>
                                 </div>
                             </div>
                         </li>
@@ -57,14 +62,21 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>July 2014</h4>
-                                    <h4 class="subheading">Phase Two Expansion</h4>
+                                    <h4 class="subheading">Donate</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">All donations from the cafe will go directly towards affected families and communities of the Kerr County Flood.</p>
+                                    <p class="text-muted">Venmo: 
+                                        <a href="https://venmo.com/JamesLoJames" 
+                                        target="_blank" 
+                                        style="color: #fed136; text-decoration: none;">
+                                            @JamesLoJames
+                                        </a>
+                                    </p>
                                 </div>
                             </div>
                         </li>
+                        <!--
                         <li class="timeline-inverted">
                             <div class="timeline-image">
                                 <h4>Be Part
