--- a/_includes/about.html
+++ b/_includes/about.html
@@ -19,13 +19,13 @@
                                     <h4 class="subheading">The Concept</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Inspired by family traditions and the simple joy of gathering, our matcha brings a moment of calm and connection to your day — easy to make, impossible not to share.</p>
+                                    <p class="text-muted">Saja Cafe started as a blank square on a 2025 bingo card. An at home cafe where friends could gather to enjoy good matcha and pastries. But more than that, our desire is to see friends come together and connect. We're so glad you could join us on this journey!</p>
                                 </div>
                             </div>
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/farmer.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -38,7 +38,7 @@
                         </li>
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/2-modified.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -58,7 +58,7 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/donate.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -67,9 +67,9 @@
                                 <div class="timeline-body">
                                     <p class="text-muted">All donations from the cafe will go directly towards affected families and communities of the Kerr County Flood.</p>
                                     <p class="text-muted">Venmo: 
-                                        <a href="https://venmo.com/JamesLoJames" 
-                                        target="_blank" 
-                                        style="color: #fed136; text-decoration: none;">
+                                        <a href="venmo://paycharge?txn=pay&recipients=JamesLoJames" 
+                                           target="_blank" 
+                                           style="color: #fed136; text-decoration: none;">
                                             @JamesLoJames
                                         </a>
                                     </p>
